--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Exomine</title>
 </head>
 <body>
-
+    <main class="container">
+    </main>
+    <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
